--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,55 +1,75 @@
 <div class="one-column">
-  <h1>
-    <%= @place.name %>
-  </h1>
-  <h2>Description</h2>
-  <div>
+  <div class="place-basic-info">
+    <span class="place-icon"></span>
+    <h2>
+      <%= @place.name %>
+    </h2>
+    <%
+      i = @place.rating.round
+      if i == 0
+    %>
+        No Rating
+    <% else
+     i.times do |x|
+    %>
+      <span class="rating-icon"></span>
+    <%
+      end
+      end %>
     <p>
-      <%= @place.description %>
+      <%= @place.vicinity %>
     </p>
   </div>
-  <h2>Photos</h2>
+  <div class="photo-place-detail">
+    <h2 class="fs-title short-border">Gallery</h2>
 
-  <!-- The Bootstrap Image Gallery lightbox, should be a child element of the document body -->
-  <div id="blueimp-gallery" class="blueimp-gallery">
-    <!-- The container for the modal slides -->
-    <div class="slides"></div>
-    <!-- Controls for the borderless lightbox -->
-    <h3 class="title"></h3>
-    <a class="prev">‹</a>
-    <a class="next">›</a>
-    <a class="close">×</a>
-    <a class="play-pause"></a>
-    <ol class="indicator"></ol>
-    <!-- The modal dialog, which will be used to wrap the lightbox content -->
-    <div class="modal fade">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" aria-hidden="true">&times;</button>
-            <h4 class="modal-title"></h4>
-          </div>
-          <div class="modal-body next"></div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default pull-left prev">
-              <i class="glyphicon glyphicon-chevron-left"></i>
-              Previous
-            </button>
-            <button type="button" class="btn btn-primary next">
-              Next
-              <i class="glyphicon glyphicon-chevron-right"></i>
-            </button>
+    <!-- The Bootstrap Image Gallery lightbox, should be a child element of the document body -->
+    <div id="blueimp-gallery" class="blueimp-gallery">
+      <!-- The container for the modal slides -->
+      <div class="slides"></div>
+      <!-- Controls for the borderless lightbox -->
+      <h3 class="title"></h3>
+      <a class="prev">‹</a>
+      <a class="next">›</a>
+      <a class="close">×</a>
+      <a class="play-pause"></a>
+      <ol class="indicator"></ol>
+      <!-- The modal dialog, which will be used to wrap the lightbox content -->
+      <div class="modal fade">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" aria-hidden="true">&times;</button>
+              <h4 class="modal-title"></h4>
+            </div>
+            <div class="modal-body next"></div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default pull-left prev">
+                <i class="glyphicon glyphicon-chevron-left"></i>
+                Previous
+              </button>
+              <button type="button" class="btn btn-primary next">
+                Next
+                <i class="glyphicon glyphicon-chevron-right"></i>
+              </button>
+            </div>
           </div>
         </div>
       </div>
     </div>
+
+    <div id="photos-place">
+      <%= render_place_photos(@place_photos) %>
+    </div>
   </div>
 
-  <div id="photos-place">
-    <%= render_place_photos(@place_photos) %>
-  </div>
+<div class="map-place-detail">
+  <h2 class="fs-title short-border">Maps</h2>
+  <div>
 
-  <h2>Maps</h2>
-  <iframe src="<%= @place.map_url %>" width="600" height="450"
-          frameborder="0" style="border:0" allowfullscreen></iframe>
+    <iframe src="<%= @place.map_url %>" width="600" height="450"
+            frameborder="0" style="border:0" allowfullscreen></iframe>
+  </div>
+</div>
+
 </div>
