--- a/app/views/share/_login_user_menu.html.erb
+++ b/app/views/share/_login_user_menu.html.erb
@@ -1,8 +1,8 @@
 <ul class="nav nav-pills top-after-login">
   <li>
     <div class="btn-group">
-      <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Notification
+      <button type="button" class="btn btn-secondary dropdown-toggle notification-btn" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <span class="notification-icon"></span> <span class="notification-text">Notification</span>
       </button>
       <div class="dropdown-menu notification-box" id="notification-list">
         <%= render 'notifications/notification' %>
