--- a/app/views/best_contributors/_contributor.html.erb
+++ b/app/views/best_contributors/_contributor.html.erb
@@ -1,7 +1,9 @@
 <div>
-  <div class="best-contributor-photo"><img width="100%" height="152" src="<%= user.avatar %>" /></div>
-  <div class="contributor-info">
-  <h3><%= user.name %> </h3>
-    <span class="num-contribution"><%= user.point %> points</span>
-  </div>
+  <%= link_to user do %>
+      <div class="best-contributor-photo"><img width="100%" height="152" src="<%= user.avatar %>" /></div>
+      <div class="contributor-info">
+        <h3><%= user.name %> </h3>
+        <span class="num-contribution"><%= pluralize(user.point, 'point') %></span>
+      </div>
+  <% end %>
 </div>
