--- a/app/views/share/_login_user_menu.html.erb
+++ b/app/views/share/_login_user_menu.html.erb
@@ -1,8 +1,11 @@
 <ul class="nav nav-pills top-after-login">
   <li>
     <div class="btn-group">
-      <button type="button" class="btn btn-secondary dropdown-toggle notification-btn" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        <span class="notification-icon"></span> <span class="notification-text">Notification</span>
+      <button type="button" class="btn btn-secondary dropdown-toggle notification-btn"
+              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="margin-top: 4px">
+        <span class="notification-icon"></span> <span class="notification-text" style="color: white; font-size: 20px">
+          Notification
+        </span>
       </button>
       <div class="dropdown-menu notification-box" id="notification-list">
         <%= render 'notifications/notification' %>
@@ -11,8 +14,9 @@
   </li>
 
   <li role="presentation" class="dropdown" style="display: inline-flex">
-    <a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
-      <%= image_tag current_user.avatar, width: 30, class: 'img-rounded' %>
+    <a class="dropdown-toggle nav-link" data-toggle="dropdown" href="#" style="color: white"
+       role="button" aria-haspopup="true" aria-expanded="false">
+      <%= image_tag current_user.avatar, height: 30, class: 'img-rounded' %>
       <div class="username-right-top"><%= current_user.name %></div>
       <span class="caret"></span>
     </a>
