--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <%= render 'share/flash' %>
 
   <% if params[:controller] == 'home' %>
   <div class="image-search-home">
