--- a/app/views/share/_flash.html.erb
+++ b/app/views/share/_flash.html.erb
@@ -1,5 +1,5 @@
 <% flash.each do |key, value| %>
-    <div class="alert alert-danger" style="margin-bottom: 0" role="alert">
+    <div class="<%= key == 'alert' ? 'alert alert-danger' : 'alert alert-success' %>" style="margin-bottom: 0" role="alert">
       <%= value %>
     </div>
 <% end %>
