--- a/app/views/schedule_days/_schedule_day.html.erb
+++ b/app/views/schedule_days/_schedule_day.html.erb
@@ -56,7 +56,7 @@
                 Tourist Attraction:
               </label>
               <input class="typeahead form-control" type="text" placeholder="Where you love to visit"
-                     id="attraction_<%= schedule_day.index %>">
+                     id="attraction_<%= schedule_day.index %>" autofocus>
               <input type="hidden" name="attraction[place_id]" id="place_<%= schedule_day.index %>" value="">
             </div>
 
