--- a/app/views/trips/_basic_info.html.erb
+++ b/app/views/trips/_basic_info.html.erb
@@ -1,7 +1,7 @@
 <%= form_for @trip, method: :put, remote: true do |_| %>
     <div>
       <div class="container trip-basic-info-form">
-        <h2 class="fs-title">Trip Basic Information</h2>
+        <h2 class="fs-title">Basic Information</h2>
 
         <div id="trip-error">
           <%= render 'share/model_error', object: @trip %>
@@ -26,7 +26,7 @@
         <div class="row">
           <div class="col-md-6">
             <fieldset class="form-group">
-              <label for="departures">Starting Information</label>
+              <label for="departures">Starting Location</label>
               <div id="trip-departure-id">
                 <input class="typeahead form-control" type="text" value="<%= @trip.departure.try(:name) %>"
                        name="trip[departure]" placeholder="Departure" id="departure">
