--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="horizontal-block-center">
   <div class="profile-basic-info">
     <div class="profile-photo">
-      <%= image_tag @user.avatar, class: 'img-rounded', style: 'height: 120px; width: 120px; object-fit: cover;' %>
+      <%= image_tag "http://#{@user.avatar}", class: 'img-rounded', style: 'height: 120px; width: 120px; object-fit: cover;' %>
     </div>
     <div class="basic-info">
       <h2><%= @user.name %></h2>
