fix budget update

--- a/app/views/budget_items/_budget_plan_form.html.erb
+++ b/app/views/budget_items/_budget_plan_form.html.erb
@@ -38,7 +38,8 @@
           </div>
           <div class="modal-footer">
             <button type="submit" class="btn btn-success" id="budget_update_btn<%= budget_item.id %>"
-                    style="margin-bottom: 8px; margin-top: 16px; width: 100%">Save</button>
+                    style="margin-bottom: 8px; margin-top: 16px; width: 100%">Save
+            </button>
           </div>
       <% end %>
     </div>
