--- a/app/views/budget_items/update.js.erb
+++ b/app/views/budget_items/update.js.erb
@@ -1,2 +1,3 @@
 $('#budget_plan').html("<%= j(render 'trips/budget_plan') %>");
 $('.modal-backdrop').remove();
+$('body').removeClass('modal-open');
