--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -33,6 +33,22 @@
     </div>
   </div>
 </div>
+<div class="featured-destinations">
+  <h2>
+    Top Destinations:
+  </h2>
+  <div class="home-destination-list">
+    <a href="#" class="featured-city">
+      <%= image_tag('danang_home.png') %>
+    </a>
+    <a href="#" class="featured-city">
+      <%= image_tag('hanoi_home.png') %>
+    </a>
+    <a href="#" class="featured-city">
+      <%= image_tag('saigon_home.png') %>
+    </a>
+  </div>
+</div>
 
 <div class="site-best-contributor">
   <h2>
@@ -50,7 +66,7 @@
 
 
 <div class="site-our-team">
-  <h2 class="home-info">WE-TRIP IS PROUDLY BUILT BY: </h2>
+  <h2>WE-TRIP IS PROUDLY BUILT BY: </h2>
   <div class="team-info">
     <div class="col-md-4 site-mem">
       <span class="landoan-photo"></span>
