--- a/app/views/trips/show.html.erb
+++ b/app/views/trips/show.html.erb
@@ -120,6 +120,7 @@
 </div>
 
 <script type="text/javascript">
+  hideLoading();
   $(document).ready(function () {
     $('.trip-gallery-carousel').slick({
       infinite: true,
