--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,65 +9,64 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <%= render 'share/flash' %>
 
-  <% if params[:controller] == 'home' %>
-  <div class="image-search-home">
-    <div class="container">
+<!-- FLASH -->
+<%= render 'share/flash' %>
 
-      <!-- NAV BAR -->
-      <%= render 'share/navbar' %>
+<!-- LOADING VIEW -->
+<%= render 'share/loading' %>
 
-      <!-- CREATE ACTION -->
-      <div class="header text-center">
-        <h1>WE TRIP</h1>
-        <h2>Travel in your own way</h2>
-        <% if sign_in? %>
-        <button type="button" class="btn" id="createTripBtn" data-toggle="modal" data-target="#trip-form">
-          Create a trip
-        </button>
-            <% end %>
-      </div>
-    </div>
+<% if params[:controller] == 'home' %>
+    <div class="image-search-home">
+      <div class="container">
 
-    <!-- SEARCH ACTION -->
-    <div class="main-search text-center">
-      <%= render 'share/search' %>
-    </div>
-  </div>
+        <!-- NAV BAR -->
+        <%= render 'share/navbar' %>
 
-  <!-- MAIN ACTION -->
-  <%= yield %>
-  <% else %>
-
-  <!-- HEADER VIEW -->
-  <div class="trip-top-header">
-    <div class="container">
-      <a href="<%= root_path %>">
-        <h1>WE TRIP</h1>
-        <span class="slogan">Travel in your own way</span>
-      </a>
-      <div class="top-right-trip">
-        <% if sign_in? %>
-        <%= render 'share/login_user_menu' %>
-        <% else %>
-        <div class="top-before-login text-right" style="margin-top: 8px">
-          <button type="button" class="btn" id="loginBtn" data-toggle="modal" data-target="#login-form">Login</button>
-          <button type="button" class="btn" id="registerBtn" data-toggle="modal" data-target="#register-form">Register</button>
+        <!-- CREATE ACTION -->
+        <div class="header text-center">
+          <h1>WE TRIP</h1>
+          <h2>Travel in your own way</h2>
+          <% if sign_in? %>
+              <button type="button" class="btn" id="createTripBtn" data-toggle="modal" data-target="#trip-form">
+                Create a trip
+              </button>
+          <% end %>
         </div>
-        <%= render 'sessions/new' %>
-        <%= render 'users/new' %>
-        <% end %>
+      </div>
+
+      <!-- SEARCH ACTION -->
+      <div class="main-search text-center">
+        <%= render 'share/search' %>
       </div>
     </div>
-  </div>
 
-  <%= yield %>
-  <% if params[:controller] == 'trips' && params[:action] == 'edit' %>
-  <!-- LOADING VIEW -->
-  <%= render 'share/loading' %>
-  <% end %>
-  <% end %>
+    <!-- MAIN ACTION -->
+    <%= yield %>
+<% else %>
+    <!-- HEADER VIEW -->
+    <div class="trip-top-header">
+      <div class="container">
+        <a href="<%= root_path %>">
+          <h1>WE TRIP</h1>
+          <span class="slogan">Travel in your own way</span>
+        </a>
+        <div class="top-right-trip">
+          <% if sign_in? %>
+              <%= render 'share/login_user_menu' %>
+          <% else %>
+              <div class="top-before-login text-right" style="margin-top: 8px">
+                <button type="button" class="btn" id="loginBtn" data-toggle="modal" data-target="#login-form">Login</button>
+                <button type="button" class="btn" id="registerBtn" data-toggle="modal" data-target="#register-form">Register</button>
+              </div>
+              <%= render 'sessions/new' %>
+              <%= render 'users/new' %>
+          <% end %>
+        </div>
+      </div>
+    </div>
+    <%= yield %>
+<% end %>
 
 </body>
 </html>
