--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1314,3 +1314,16 @@ h2.home-info {
     margin-right: 8px;
   }
 }
+.region-header{
+  img{
+    width: 100%;
+  }
+}
+.region-info{
+  padding: 16px;
+  font-size: 20px;
+  p{
+    width: 60%;
+    margin: auto;
+  }
+}
