--- a/app/views/share/_navbar.html.erb
+++ b/app/views/share/_navbar.html.erb
@@ -2,11 +2,13 @@
   <% if sign_in? %>
       <%= render 'share/login_user_menu' %>
   <% else %>
+      <% if params[:controller] != 'home' %>
       <div class="top-before-login text-right" style="margin-top: 8px">
         <button type="button" class="btn" id="loginBtn" data-toggle="modal" data-target="#login-form">Login</button>
         <button type="button" class="btn" id="registerBtn" data-toggle="modal" data-target="#register-form">Register</button>
       </div>
       <%= render 'sessions/new' %>
       <%= render 'users/new' %>
+          <% end %>
   <% end %>
 </div>
