--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1049,6 +1049,8 @@ h2, h3, h4, h5, h6, strong, .bold-text {
   position: relative;
   z-index: -1;
   object-fit: cover;
+  width: 100%;
+  height: 300px;
 }
 
 .card .card-image span.card-title {
