--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -21,6 +21,9 @@
     <p>
       <%= @place.vicinity %>
     </p>
+    <% if @place.id == 1 %>
+        <p>150.000 VND</p>
+    <% end %>
   </div>
   <div class="photo-place-detail">
     <h2 class="fs-title short-border">Gallery</h2>
