--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -22,7 +22,7 @@
       <%= @place.vicinity %>
     </p>
     <% if @place.id == 1 %>
-        <p>150.000 VND</p>
+        <p>Ticket price: 150.000 VND</p>
     <% end %>
   </div>
   <div class="photo-place-detail">
