--- a/app/views/share/_search.html.erb
+++ b/app/views/share/_search.html.erb
@@ -1,5 +1,5 @@
 <% if params[:controller] == 'home' %>
-    <form class="form-inline home-search" method="get" action="/searchs">
+    <form class="form-inline form-search" method="get" action="/searchs">
       <div class="form-group">
         <label class="sr-only" for="fromPlace">From</label>
         <input type="text" class="form-control home-search-box" id="fromPlace" name="departure" placeholder="Departure">
