--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -69,21 +69,21 @@
   <div class="row">
   <h2>WE-TRIP IS PROUDLY BUILT BY</h2>
   <div class="team-info">
-    <div class="col-md-4 col-sm-8 col-xs-12">
+    <div class="col-sm-4">
       <span class="landoan-photo"></span>
       <div class="mem-name">
         <h3>Doan Phuong Lan</h3>
       </div>
     </div>
 
-    <div class="col-md-4 col-sm-8 col-xs-12 site-mem">
+    <div class="col-sm-4">
       <span class="quanvu-photo site-mem"></span>
       <div class="mem-name">
         <h3>Vu Huy Quan</h3>
       </div>
     </div>
 
-    <div class="col-md-4 col-sm-8 col-xs-12 site-mem">
+    <div class="col-sm-4">
       <span class="khanhdang-photo"></span>
       <div class="mem-name">
         <h3>Dang Kim Khanh</h3>
