--- a/app/views/place_photos/_place_photo.html.erb
+++ b/app/views/place_photos/_place_photo.html.erb
@@ -1,3 +1,5 @@
-<a href="<%= place_photo.url %>" title="<%= place_photo.place_name %>" data-gallery>
+<div class="col-xs-6 col-md-3">
+<a class="thumbnail" href="<%= place_photo.url %>" title="<%= place_photo.place_name %>" data-gallery>
   <img src="<%= place_photo.url %>" alt="<%= place_photo.place_name %>">
 </a>
+</div>
