--- a/app/views/trips/_budget_plan.html.erb
+++ b/app/views/trips/_budget_plan.html.erb
@@ -7,7 +7,15 @@
 <% end %>
 
 <div class="budget-plan">
-  <div class="budget-plan-table">
+
+
+  <div class="budget-plan-split-individual col-md-4 col-sm-4 col-xs-12 pull-right">
+    <span class="budget-plan-split-individual-title">Individual Expenses</span>
+    <div class="panel-group" id="accordion">
+      <%= render partial: 'users/user_with_budgets', collection: @user_with_budgets, as: :user %>
+    </div>
+  </div>
+  <div class="budget-plan-table col-md-8 col-sm-8 col-xs-12 pull-left">
     <div class="budget-row header-budget">
       <div class="col-md-3">
         Item
@@ -36,13 +44,6 @@
       <div class="col-md-3">
         &nbsp;
       </div>
-    </div>
-  </div>
-
-  <div class="budget-plan-split-individual">
-    <span class="budget-plan-split-individual-title">Individual Expenses</span>
-    <div class="panel-group" id="accordion">
-      <%= render partial: 'users/user_with_budgets', collection: @user_with_budgets, as: :user %>
     </div>
   </div>
 </div>
