--- a/app/views/attractions/_attraction.html.erb
+++ b/app/views/attractions/_attraction.html.erb
@@ -16,7 +16,7 @@
           <h3 class="tag"><%= attraction.hour_spend %> hour</h3>
         </div>
 
-        <div class="text-right remove-itinerary col-remove">
+        <div class="pull-right remove-itinerary col-remove">
           <%= link_to schedule_day_attraction_path(attraction.schedule_day_id, attraction),
                       id: "remove-itinerary_#{attraction.index}", rel: "day-detail_#{attraction.index}",
                       remote: true, method: :delete do %>
