--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,7 +56,7 @@
 <% else %>
     <!-- HEADER VIEW -->
     <div class="trip-top-header">
-      <div class="container">
+      <div class="container-fluid">
         <a href="<%= root_path %>">
           <h1>WE TRIP</h1>
           <span class="slogan">Travel in your own way</span>
