--- a/app/views/trips/_trip_summary.html.erb
+++ b/app/views/trips/_trip_summary.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-6">
+<div class="col-md-4 col-sm-6 col-xs-12">
   <div class="card">
     <%= link_to trip, id: "trip_sum_#{trip.id}" do %>
         <div class="card-image">
