--- a/app/views/place_photos/_place_photo.html.erb
+++ b/app/views/place_photos/_place_photo.html.erb
@@ -1,5 +1,4 @@
-<div class="col-xs-6 col-md-3">
-<a class="thumbnail" href="<%= place_photo.url %>" title="<%= place_photo.place_name %>" data-gallery>
-  <img src="<%= place_photo.url %>" alt="<%= place_photo.place_name %>">
+<a href="<%= place_photo.url %>" title="<%= place_photo.place_name %>" data-gallery>
+  <img class="trip-gallery-photo-item" width="300" height="300"
+       src="<%= place_photo.url %>" alt="<%= place_photo.place_name %>">
 </a>
-</div>
