--- a/app/views/trips/_basic_info.html.erb
+++ b/app/views/trips/_basic_info.html.erb
@@ -44,7 +44,7 @@
         </div>
         <div>
           <fieldset class="form-group">
-            <label>Participants</label>
+            <label>Trip's members (You can add more than one)</label>
             <ul id="participantTags">
             </ul>
             <%= hidden_field_tag 'participant' %>
