--- a/app/views/trips/_footer_navigator.html.erb
+++ b/app/views/trips/_footer_navigator.html.erb
@@ -1,4 +1,4 @@
 <div class="foot-nav">
-  <button type="button" name="previous" class="btn previous nav-button"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>Previous</button>
+  <button type="button" name="previous" style="width: 120px" class="btn previous nav-button"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>Previous</button>
   <button type="button" name="next" class="btn next nav-button">Next<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span></button>
 </div>
