--- a/app/views/schedule_days/_schedule_day.html.erb
+++ b/app/views/schedule_days/_schedule_day.html.erb
@@ -1,87 +1,89 @@
 <div class="tab-pane fade in <%= schedule_day.index == 1 && 'active' %> days-tab" id="day<%= schedule_day.index %>">
   <!-- Attractions -->
-  <div class="col-md-3">
+  <div class="col-sm-4 no-padding-left">
     <div class="schedule-form">
-      <div class="schedule-content" style="margin-top: 24px">
+      <div class="schedule-content">
         <div id="schedule_<%= schedule_day.index %>" class="schedule">
+          <% if !schedule_day.attractions.blank? %>
           <ul class="sortable" id="sortable_<%= schedule_day.index %>">
             <%= render schedule_day.attractions %>
           </ul>
+          <% end %>
+
 
           <!-- Add button -->
-          <button type="button" class="btn hot-action-button" id="addAttractionItineraryBtn" data-toggle="modal"
-                  data-target="#add-to-itinerary-form_<%= schedule_day.index %>">
-            Add Attraction
-          </button>
+          <button type="button" style="width: 100%" class="btn hot-action-button" id="addAttractionItineraryBtn" data-toggle="modal"
+          data-target="#add-to-itinerary-form_<%= schedule_day.index %>">
+          Add Attraction
+        </button>
 
-          <!-- Delete button -->
-          <%= link_to [@trip, schedule_day], class: 'btn delete-day-btn',
-                      id: 'deleteDayBtn', remote: true, method: :delete do %>
-              <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Delete Day
-          <% end %>
-          <script>
-            $('.delete-day-btn').click(function () {
-              showLoading();
-            })
-          </script>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Map -->
-  <div class="col-md-9">
-    <div id="map<%= schedule_day.index %>" style="width: 100%; height: 400px"></div>
-  </div>
-
-  <!-- Attraction Form -->
-  <div class="modal fade add-to-itinerary-form" id="add-to-itinerary-form_<%= schedule_day.index %>" tabindex="-1"
-       role="dialog" aria-labelledby="addToItineraryFormLabel"
-       aria-hidden="true" xmlns="http://www.w3.org/1999/html">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-          <h2 class="modal-title" id="addToItineraryFormLabel">Add Attraction to Itinerary</h2>
-        </div>
-        <%= form_tag schedule_day_attractions_path(schedule_day), remote: true, method: :post,
-                     class: 'form-horizontal form-schedule form-card',
-                     id: "form-schedule_#{schedule_day.index}" do %>
-
-            <!-- Place to go to -->
-            <div class="form-group">
-              <label for="attraction_<%= schedule_day.index %>" class="form-control-label">
-                Tourist Attraction:
-              </label>
-              <input class="typeahead form-control" type="text" placeholder="Where you love to visit"
-                     id="attraction_<%= schedule_day.index %>" autofocus>
-              <input type="hidden" name="attraction[place_id]" id="place_<%= schedule_day.index %>" value="">
-            </div>
-
-            <!-- Spending hours -->
-            <div class="form-group">
-              <label for="spendingTime_<%= schedule_day.index %>" class="form-control-label">
-                Hours spending:
-              </label>
-              <select class="form-control" name="attraction[hour_spend]" id="spendingTime_<%= schedule_day.index %>">
-                <option>1</option>
-                <option>2</option>
-                <option>3</option>
-                <option>4</option>
-                <option>5</option>
-              </select>
-            </div>
-
-            <!-- Submit button -->
-            <div class="form-group">
-              <button type="submit" class="btn addItineraryBtn" id="add_itinerary_btn">Add to itinerary</button>
-            </div>
+        <!-- Delete button -->
+        <%= link_to [@trip, schedule_day], style:'margin-top: 5px; width:100%;', class: 'btn delete-day-btn',
+        id: 'deleteDayBtn', remote: true, method: :delete do %>
+        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>Delete Day
         <% end %>
+        <script>
+          $('.delete-day-btn').click(function () {
+            showLoading();
+          })
+        </script>
       </div>
     </div>
   </div>
+</div>
+
+<!-- Map -->
+<div class="col-sm-8 no-padding-left-right" >
+  <div id="map<%= schedule_day.index %>" style="width: 100%; height: 400px"></div>
+</div>
+
+<!-- Attraction Form -->
+<div class="modal fade add-to-itinerary-form" id="add-to-itinerary-form_<%= schedule_day.index %>" tabindex="-1"
+ role="dialog" aria-labelledby="addToItineraryFormLabel"
+ aria-hidden="true" xmlns="http://www.w3.org/1999/html">
+ <div class="modal-dialog" role="document">
+  <div class="modal-content">
+    <div class="modal-header">
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
+      <h2 class="modal-title" id="addToItineraryFormLabel">Add Attraction to Itinerary</h2>
+    </div>
+    <%= form_tag schedule_day_attractions_path(schedule_day), remote: true, method: :post,
+    class: 'form-horizontal form-schedule form-card',
+     id: "form-schedule_#{schedule_day.index}" do %>
+
+     <!-- Place to go to -->
+     <div class="form-group">
+      <label for="attraction_<%= schedule_day.index %>" class="form-control-label">
+        Tourist Attraction:
+      </label>
+      <input class="typeahead form-control" type="text" placeholder="Where you love to visit"
+      id="attraction_<%= schedule_day.index %>" autofocus>
+      <input type="hidden" name="attraction[place_id]" id="place_<%= schedule_day.index %>" value="">
+    </div>
+
+    <!-- Spending hours -->
+    <div class="form-group">
+      <label for="spendingTime_<%= schedule_day.index %>" class="form-control-label">
+        Hours spending:
+      </label>
+      <select class="form-control" name="attraction[hour_spend]" id="spendingTime_<%= schedule_day.index %>" style="height: 100%">
+        <option>1</option>
+        <option>2</option>
+        <option>3</option>
+        <option>4</option>
+        <option>5</option>
+      </select>
+    </div>
+  <!-- Submit button -->
+  <div class="form-group">
+    <button type="submit" class="btn addItineraryBtn" id="add_itinerary_btn">Add to itinerary</button>
+  </div>
+  <% end %>
+</div>
+</div>
+</div>
 </div>
 
 <script>
@@ -93,24 +95,24 @@
     $("#place_<%= schedule_day.index %>").val(suggestion.id);
   });
   $('#attraction_<%= schedule_day.index %>').typeahead(
-      {
-        hint: true,
-        highlight: true,
-        minLength: 1
-      },
-      {
-        name: 'states',
-        limit: 50,
-        source: placeEngine,
-        display: 'name',
-        templates: {
-          suggestion: Handlebars.compile("" +
-              "<div class='dropdown-suggestion'>" +
-              "<div class='dropdown-suggestion-image'>" +
-              "<image src='{{display_image_url}}' width='50' height='50' class='img-circle'/>" +
-              "</div><div class='dropdown-suggestion-name'>{{suggest_title}}</div></div>")
-        }
-      }
+  {
+    hint: true,
+    highlight: true,
+    minLength: 1
+  },
+  {
+    name: 'states',
+    limit: 50,
+    source: placeEngine,
+    display: 'name',
+    templates: {
+      suggestion: Handlebars.compile("" +
+                                     "<div class='dropdown-suggestion'>" +
+                                     "<div class='dropdown-suggestion-image'>" +
+                                     "<image src='{{display_image_url}}' width='50' height='50' class='img-circle'/>" +
+                                     "</div><div class='dropdown-suggestion-name'>{{suggest_title}}</div></div>")
+    }
+  }
   );
 
   // Sort attractions
@@ -119,10 +121,10 @@
   $("#sortable_<%= schedule_day.index %>").sortable({
     update: function (event, ui) {
       var indexes = $('#sortable_<%= schedule_day.index %> #attraction_index')
-          .toArray()
-          .map(function (ui) {
-            return ui.value
-          });
+      .toArray()
+      .map(function (ui) {
+        return ui.value
+      });
       showLoading();
       $.ajax({
         method: 'POST',
